methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:10: error: reassignment to val
def isFacingTrial(); Boolean={
                            ^